# anvil

./: .gitignore  .goreleaser.yaml  Makefile  README.md  anvil  go.mod  go.sum  go.work  install.ps1  install.sh  package.json
.cache/upstream-schemas/: aws-v7.23.0-trimmed.json  gcp-v9.15.0-trimmed.json
.github/workflows/: release.yml
azureGraveyard/azure/function/: function.go  schema.json
cmd/anvil/: main.go
cmd/anvil/cmd/: bootstrap.go  deploy.go  destroy.go  engine.go  entrypoint.go  errors.go  init.go  list-stage.go  preview.go  prompt.go  root.go  stage.go  ui.go  unlock.go  version.go
docs/nodejs/: README.md
docs/python/: README.md
provider/: base-schema.json  go.mod  go.sum  provider-README.md  schema.json
scripts/: fix-sdk-package.js  fix-sdk-python.js
scripts/generate/: README.md  generate_schemas.go
scripts/generate-site-schemas/: main.go
scripts/merge/: merge_schemas.go  schema.json
scripts/registry/: generate_registry.go
sdk/nodejs/: app.ts  block.ts  index.ts  package-lock.json  package.json  provider.ts  tsconfig.json
sdk/python/: README.md  pyproject.toml
sdk/python/anvil_cloud/: __init__.py  _utilities.py  block.py  provider.py  pulumi-plugin.json  types.py
sdk/python/anvil_cloud/aws/: __init__.py  _inputs.py  bucket.py  lambda_.py  svelte_kit_site.py
sdk/python/anvil_cloud/gcp/: __init__.py  _inputs.py  function.py  storage_bucket.py  svelte_kit_site.py
spike/: go.mod  go.sum
test-app/: .gitignore  Pulumi.dev.yaml  Pulumi.yaml  debug.txt  index.ts  package.json
test-app-go/: Pulumi.yaml  go.mod  main.go
(+54 files in other folders)
